Aligned the catkey with cocina-models
This is how sdr-client is not supplying the catkey since 0.13.0
